--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
   }
 }
